--- a/code 2/code 2.vcxproj
+++ b/code 2/code 2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{e43a0abe-aafc-4e66-acf0-092c4672fb9b}</ProjectGuid>
     <RootNamespace>code2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>[2] 구조체 배열을 사용한 프로그램을 malloc과 realloc 사용하도록 변경하여 위와 동일하게 동작시켜서 stack full이 발생하지 않도록함</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="code 2.cpp" />
+    <ClCompile Include="[2] 구조체 배열을 사용한 프로그램을 malloc과 realloc 사용하도록 변경하여 위와 동일하게 동작시켜서 stack full이 발생하지 않도록함.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
